--- a/assets/sass/_custom-variables.scss
+++ b/assets/sass/_custom-variables.scss
@@ -1,6 +1,6 @@
 $body-bg: #fff;
 $body-color: #111;
-$primary: #993333;
+$primary: #f3c858;
 $dark-primary: #303F9F;
 $light-primary: #C5CAE9;
 $text: #FFFFFF;
