--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -353,20 +353,20 @@ ol ol {
 }
 
 .sidebackground {
-    background-color: #993333
+    background-color: #f3c858
 }
 
 .navigation a {
-    background-color: #993333;
-    color: white;
+    background-color: #f3c858;
+    color: #303F9F;
     font-weight: bold;
     font-size: 1.25em;
     border: none
 }
 
 .navigation a:hover {
-    background-color: #fff;
-    color: #993333;
+    background-color: #303F9F;
+    color: #f3c858;
     font-weight: bold;
     font-size: 1.25em;
     border: none
