--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
         </div>
         <div class="col-sm-4">
             <main>
-                <title>New York City Civil Rights History, a teaching guide</title>
+                <title>New York Disability Rights Archive</title>
                     <p>{{ .Content| page.RenderString | safeHTML }}</p>
                     <div>
                         {{ with .Params.btn1 }}
