--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,63 +1,62 @@
-@import "bootstrap/scss/functions";
-
+@use "bootstrap/scss/functions";
 
 // 2. Include any default variable overrides here
-@import "custom-variables";
-@import "bootstrap/scss/variables";
-@import "bootstrap/scss/variables-dark";
+@use "custom-variables";
+@use "bootstrap/scss/variables";
+@use "bootstrap/scss/variables-dark";
 
 // 3. Include remainder of required Bootstrap stylesheets
-@import "bootstrap/scss/maps";
-@import "bootstrap/scss/mixins";
+@use "bootstrap/scss/maps";
+@use "bootstrap/scss/mixins";
 
 // 4. Include any optional Bootstrap components as you like
 // scss-docs-start import-stack
 // Configuration
-@import "bootstrap/scss/utilities";
+@use "bootstrap/scss/utilities";
 
 // Layout & components
-@import "bootstrap/scss/root";
-@import "bootstrap/scss/reboot";
-@import "bootstrap/scss/type";
-@import "bootstrap/scss/images";
-@import "bootstrap/scss/containers";
-@import "bootstrap/scss/grid";
-// @import "//bootstrap/scss/tables";
-// @import "//bootstrap/scss/forms";
-@import "bootstrap/scss/buttons";
-@import "bootstrap/scss/transitions";
-// @import "//bootstrap/scss/dropdown";
-// @import "//bootstrap/scss/button-group";
-@import "bootstrap/scss/nav";
-@import "bootstrap/scss/navbar";
-@import "bootstrap/scss/card";
-@import "bootstrap/scss/accordion";
-@import "bootstrap/scss/breadcrumb";
-@import "bootstrap/scss/pagination";
-// @import "//bootstrap/scss/badge";
-// @import "//bootstrap/scss/alert";
-// @import "//bootstrap/scss/progress";
-@import "bootstrap/scss/list-group";
-// @import "//bootstrap/scss/close";
-// @import "//bootstrap/scss/toasts";
-// @import "//bootstrap/scss/modal";
-// @import "//bootstrap/scss/tooltip";
-// @import "//bootstrap/scss/popover";
-// @import "//bootstrap/scss/carousel";
-// @import "//bootstrap/scss/spinners";
-@import "//bootstrap/scss/offcanvas";
-// @import "//bootstrap/scss/placeholders";
+@use "bootstrap/scss/root";
+@use "bootstrap/scss/reboot";
+@use "bootstrap/scss/type";
+@use "bootstrap/scss/images";
+@use "bootstrap/scss/containers";
+@use "bootstrap/scss/grid";
+// @use "//bootstrap/scss/tables";
+// @use "//bootstrap/scss/forms";
+@use "bootstrap/scss/buttons";
+@use "bootstrap/scss/transitions";
+// @use "//bootstrap/scss/dropdown";
+// @use "//bootstrap/scss/button-group";
+@use "bootstrap/scss/nav";
+@use "bootstrap/scss/navbar";
+@use "bootstrap/scss/card";
+@use "bootstrap/scss/accordion";
+@use "bootstrap/scss/breadcrumb";
+@use "bootstrap/scss/pagination";
+// @use "//bootstrap/scss/badge";
+// @use "//bootstrap/scss/alert";
+// @use "//bootstrap/scss/progress";
+@use "bootstrap/scss/list-group";
+// @use "//bootstrap/scss/close";
+// @use "//bootstrap/scss/toasts";
+// @use "//bootstrap/scss/modal";
+// @use "//bootstrap/scss/tooltip";
+// @use "//bootstrap/scss/popover";
+// @use "//bootstrap/scss/carousel";
+// @use "//bootstrap/scss/spinners";
+@use "//bootstrap/scss/offcanvas";
+// @use "//bootstrap/scss/placeholders";
 
 // Helpers
-@import "bootstrap/scss/helpers";
+@use "bootstrap/scss/helpers";
 
 // Utilities
-@import "bootstrap/scss/utilities/api";
+@use "bootstrap/scss/utilities/api";
 
 // scss-docs-end import-stack
 
 
 // 5. Add additional custom code here
 
-@import "custom";
-//@import "bootstrap-print-css/css/bootstrap-print";
+@use "custom";
+//@use "bootstrap-print-css/css/bootstrap-print";
