--- a/layouts/partials/dartsass.html
+++ b/layouts/partials/dartsass.html
@@ -1,4 +1,9 @@
-{{ $opts := dict "transpiler" "dartsass" "targetPath" "css/style.css" }}
-{{ with resources.Get "sass/main.scss" | toCSS $opts | minify | fingerprint }}
-  <link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
+{{ $cssOpts := (dict "targetPath" "css/main.css" "enableSourceMap" true "outputStyle" "compressed") }}
+{{ $sassTemplate := resources.Get "scss/main.scss" }}
+{{ if $sassTemplate }}
+  {{ $style := $sassTemplate | toCSS $cssOpts }}
+  <link rel="stylesheet" href="{{ $style.RelPermalink }}">
+{{ else }}
+  <!-- Handle case where the Sass file is not found -->
+  <p>Error: main.scss not found in assets/scss.</p>
 {{ end }}
