test autobuild with actual changes

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -224,7 +224,7 @@ blockquote {
 }
 
 .nav-link {
-    color: #993333;
+    color: #f0e000ea;
     font-weight: bolder;
 }
 
@@ -357,7 +357,7 @@ ol ol {
 }
 
 .navigation a {
-    background-color: #f3c858;
+    background-color: #F3C858;
     color: #303F9F;
     font-weight: bold;
     font-size: 1.25em;
@@ -366,7 +366,7 @@ ol ol {
 
 .navigation a:hover {
     background-color: #303F9F;
-    color: #f3c858;
+    color: #F3C858;
     font-weight: bold;
     font-size: 1.25em;
     border: none
