--- a/layouts/partials/header-sidebar.html
+++ b/layouts/partials/header-sidebar.html
@@ -1,17 +1,17 @@
 <div id="skip"><a href="#main">Skip to Main Content</a></div>
 <div class="col-sm-2 sidebar-offcanvas sidebackground " id="sidebar" role="navigation">
-<div class="col-auto px-0 offcanvas offcanvas-start " tabindex="-1" aria-labelledby="sidebar">
-  <div class="border-end visible-lg offcanvas-header "> 
+<div class="col-auto px-0 offcanvas-start " tabindex="-1" aria-labelledby="sidebar">
+  <div class="col-auto px-0 border-end"> 
       <div class="sitelogo offcanvas-body ">
-        <a class="navbar-brand" href="/home">
-        <img src="/img/nydr-archive-logo.jpg" alt="New York Disability Rights Archive" width="100%" class="d-print-block">
+        <a class="navbar-brand" href="./">
+        <img src="/img/nydr-archive-logo.jpg" alt="New York Disability Rights Archive" width="100%">
       </a>
   </div>
-  <div id="sidebar-nav" class="navigation list-group border-0 rounded-0 text-sm-start min-vh-100 py-3 d-print-none">
+<div id="sidebar-nav" class="navigation list-group border-0 rounded-0 text-sm-start min-vh-100 py-3 d-print-none">
     <ul class="navbar-nav mb-sm-0">
       {{ range .Site.Menus.main }}
       <li class="nav-item">
-        <a class="px-2 nav-link{{ if $.IsMenuCurrent "main" . }} "active aria-current="page{{ end }}" href="{{ .URL }}">{{ .Pre }}
+        <a class="px-2 nav-link{{ if $.IsMenuCurrent "main" . }} "active aria-current="page{{ end }}" href="{{ .URL }}">
           <span>{{ .Name }}</span></a>
       </li>
       {{ end }}
